[package]
name = "hydroperx-sem-proc"
version = "1.0.0"
edition = "2021"
authors = ["hydroperx <hydroperfox@gmail.com>"]
repository = "https://github.com/hydroperx/sem.rs"
license = "Apache-2.0"
description = "Semantic entities for Rust: procedural macros."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
by_address = "1.1.0"
proc-macro2 = { version = "1", features = ["nightly"] }
quote = "1"
syn = { version = "2.0.38", features = ["full"] }